Prepare for October release.
Kits for release:
* :sdk:kits:mopub
* :sdk:digits:digits
* :sdk:twitter:tweet-composer
* :sdk:twitter:tweet-ui
* :sdk:twitter:twitter
* :sdk:twitter:twitter-core
* :sdk:twitter:twitter-unity

Change-Id: I2bef3236368d24f3af686819878d9ad33e16d67f

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,8 @@
-
 <h2>Twitter</h2>
+<h3>1.9.0</h3>
+- Added composer with support for app install cards.
+- Removed usage of deprecated Apache HTTP Client constants.
+
 <h3>1.8.0</h3>
 - Raised Min SDK version from 8 to 9
 - Added MediaService to support media upload.
