--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,38 +1,37 @@
 <h2>Twitter</h2>
 <h3>1.9.0</h3>
-- Added composer with support for app install cards.
-- Removed usage of deprecated Apache HTTP Client constants.
+- Added composer with support for app install cards.<br/>
+- Removed usage of deprecated Apache HTTP Client constants.<br/>
 
 <h3>1.8.0</h3>
-- Raised Min SDK version from 8 to 9
-- Added MediaService to support media upload.
-- Added a StatusService update endpoint which accepts mediaIds.
+- Raised Min SDK version from 8 to 9<br/>
+- Added MediaService to support media upload.<br/>
+- Added a StatusService update endpoint which accepts mediaIds.<br/>
 
 <h3>1.7.2</h3>
-- Fixed bug in guest auth queue which cached application-only auth fallback tokens indefinitely. Change queue to disallow and clear application-only auth tokens.<br>
-- Removed logInGuest fallback to application-only auth so logInGuest consistently provides an AppSession with a GuestAuthToken. Previously, logInGuest provided an AppSession which could fall back to a non-expiring app auth token when guest token requests failed.<br>
-- Fixed bug in TwitterApiException's TwitterRateLimit.getRemainingTime()<br>
+- Fixed bug in guest auth queue which cached application-only auth fallback tokens indefinitely. Change queue to disallow and clear application-only auth tokens.<br/>
+- Removed logInGuest fallback to application-only auth so logInGuest consistently provides an AppSession with a GuestAuthToken. Previously, logInGuest provided an AppSession which could fall back to a non-expiring app auth token when guest token requests failed.<br/>
+- Fixed bug in TwitterApiException's TwitterRateLimit.getRemainingTime()<br/>
 
 <h3>1.7.1</h3>
-- Fixed issue where DigitsSessionVerifier invalidated the current session.<br>
+- Fixed issue where DigitsSessionVerifier invalidated the current session.<br/>
 
 <h3>1.7.0</h3>
 - Added Tweet actions to Tweet views<br>
-- Added TweetTimelineListAdapter Builder to support setting style and enabling actions<br>
-- Added FixedTweetTimeline for fixed sets of provided Tweets<br>
-- Deprecated TweetViewAdapter and TweetViewFetchAdapter. To Upgrade:<br>
--- If required, load Tweets by id with TweetUtils.loadTweets.<br>
--- Build a FixedTweetTimeline with the set of Tweets to display, pass the timeline to the TweetTimelineListAdapter, and set the adapter on your ListView (consistent with other Timelines)<br>
+- Added TweetTimelineListAdapter Builder to support setting style and enabling actions<br/>
+- Added FixedTweetTimeline for fixed sets of provided Tweets<br/>
+- Deprecated TweetViewAdapter and TweetViewFetchAdapter. To Upgrade:<br/>
+- If required, load Tweets by id with TweetUtils.loadTweets.<br/>
+- Build a FixedTweetTimeline with the set of Tweets to display, pass the timeline to the TweetTimelineListAdapter, and set the adapter on your ListView (consistent with other Timelines)<br/>
 
 <h3>1.6.1</h3>
-- Fixed critical issue where Twitter sessions are lost when using Proguard.<br>
-- Added unretweet endpoint to StatusesService.<br>
-- Switched CollectionService from the beta collections endpoint to the public collections endpoint.<br>
-- Changed TweetUtils loadTweet(s) to take a TwitterCore Callback. Deprecate those taking a LoadCallback.<br>
-- Changed TweetViewFetchAdapter setTweetIds to take a TwitterCore Callback. Deprecate the method taking a LoadCallback.<br>
+- Fixed critical issue where Twitter sessions are lost when using Proguard.<br/>
+- Added unretweet endpoint to StatusesService.<br/>
+- Switched CollectionService from the beta collections endpoint to the public collections endpoint.<br/>
+- Changed TweetUtils loadTweet(s) to take a TwitterCore Callback. Deprecate those taking a LoadCallback.<br/>
+- Changed TweetViewFetchAdapter setTweetIds to take a TwitterCore Callback. Deprecate the method taking a LoadCallback.<br/>
 
 <h3>1.6.0</h3>
-<p>
 - Improved security of WebView used by OAuthActivity by disabling form data saving.<br/>
 - Added ListService with lists/statuses endpoint, to TwitterApiClient.<br/>
 - Updated the CompactTweetView photo display to support a range of aspect ratios to reduce cropping.<br/>
@@ -43,11 +42,8 @@
 - Improved SearchTimeline results quality.<br/>
 - Reduced TweetView full name font weight on newer API versions for design consistency.<br/>
 - Removed tweet-composer dependency on twitter-core.<br/>
-</p>
 <h3>1.5.1</h3>
-<p>
 - Tweet-composer allows twitter-core to be excluded<br/>
-</p>
 <h3>1.5.0</h3>
 - Added CollectionTimeline to show Tweets from a Twitter Collection<br/>
 - Added refresh method to TimelineListAdapters<br/>
@@ -55,41 +51,31 @@
 - Removed final from TimelineCursor class<br/>
 - Confirmation TOS text update<br/>
 <h3>1.4.0</h3>
-<p>
 - Added UserTimeline to show Tweets for a particular user. <br/>
 - Added SearchTimeline to show Tweets that match a search query. <br/>
 - Added TweetTimelineListAdapter for providing ListViews with a scrollable Timeline of Tweets. <br/>
 - Added retweet display support to show the original Tweet with "retweeted by" attribution. <br/>
 - Added Identifiable interface to abstract models with getId() method. Made Tweet and User models implement Identifiable. <br/>
-</p>
 <h3>1.3.2</h3>
-<p>
-- Fixed race condition crash when rendering TweetViews immediately after starting TweetUi
-</p>
+- Fixed race condition crash when rendering TweetViews immediately after starting TweetUi<br/>
 <h3>1.3.1</h3>
-<p>
 - Fixed strict mode violations when using OkHttp on Fabric start.<br/>
-</p>
 <h3>1.3.0</h3>
-<p>
-- Removed targetSdkVersion from AndroidManifest in all kits to avoid manifest merging issues.
-- Added logInGuest method to TwitterCore to enable guest access to statuses endpoints user_timeline, show, lookup, search/tweets, and favorites/list.
-</p>
+- Removed targetSdkVersion from AndroidManifest in all kits to avoid manifest merging issues.<br/>
+- Added logInGuest method to TwitterCore to enable guest access to statuses endpoints user_timeline, show, lookup, search/tweets, and favorites/list.<br/>
+
 <h3>1.1.1</h3>
-<p>
 - Min SDK version updated from 7 to 8.<br/>
 - Included licensing information in pom.<br/>
 - Fixed possible kit initialization error.<br/>
 - Improved proguard configuration by bundling Consumer Proguard Config file with AAR.<br/>
 - Improved stability of Twitter login on devices that do not have the Twitter for Android App.<br/>
-- Ensured Login with Twitter and Share Tweet button text doesn't show in all caps on API 21.
-</p>
+- Ensured Login with Twitter and Share Tweet button text doesn't show in all caps on API 21.<br/>
 <h3>1.1.0</h3>
-<p>
 - Updated to Java 7, which will require customers to use Build Tools version 19 or above.<br/>
 - OAuth Echo feature.<br/>
 - Renamed "Sign in" button to "Log in with Twitter".<br/>
 - Improved layout preview of tweet views.<br/>
 - Removed Apache 2.0 licenses from pom.xml<br/>
-- Bug fixes.
-</p>
+- Bug fixes.<br/>
+
