Prepare for Twitter 1.9.1 hotfix release.
Kits for release:
* :sdk:twitter:tweet-composer
* :sdk:twitter:twitter

Change-Id: Id1ea12ada6437c451d34044615085a1ac6f2e81d

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,4 +1,8 @@
 <h2>Twitter</h2>
+<h3>1.9.1</h3>
+- Renamed drawables to avoid name collisions.<br/>
+- Fixed incorrect large Twitter logo in TweetViews.<br/>
+
 <h3>1.9.0</h3>
 - Added composer with support for app install cards.<br/>
 - Removed usage of deprecated Apache HTTP Client constants.<br/>
