Prepare for November release.
Kits for release:
* :sdk:digits:digits
* :sdk:twitter:tweet-ui
* :sdk:twitter:twitter
* :sdk:twitter:twitter-core

Change-Id: I83d72b175b3cfbdbca5eda12b18e3e2a15c943af

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,4 +1,9 @@
 <h2>Twitter</h2>
+
+<h3>1.10.0<h3>
+- Changed TweetView favorite actions to like hearts.<br/>
+- Updated translations.<br/>
+
 <h3>1.9.1</h3>
 - Renamed drawables to avoid name collisions.<br/>
 - Fixed incorrect large Twitter logo in TweetViews.<br/>
