--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,10 @@
 <h2>Twitter</h2>
 
+<h3>1.11.0<h3>
+- Added support for video and animated gif playback.<br/>
+- Added VideoInfo field to MediaEntity to support video and animated gif playback.<br/>
+- Updated translations.<br/>
+
 <h3>1.10.0<h3>
 - Changed TweetView favorite actions to like hearts.<br/>
 - Updated translations.<br/>
