Prepare for January Twitter and Digits release.
Kits for release:
* :sdk:digits:digits
* :sdk:twitter:tweet-ui
* :sdk:twitter:twitter
* :sdk:twitter:twitter-core

Change-Id: Ifbb5981c5479a3c6294fe7346c5827200261d3d9

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,11 +1,15 @@
 <h2>Twitter</h2>
+<h3>1.12.0</h3>
+- Added basic photo viewer.<br/>
+- Added custom controls for video playback.<br/>
+- Enabled looping for animated gifs.<br/>
 
-<h3>1.11.0<h3>
+<h3>1.11.0</h3>
 - Added support for video and animated gif playback.<br/>
 - Added VideoInfo field to MediaEntity to support video and animated gif playback.<br/>
 - Updated translations.<br/>
 
-<h3>1.10.0<h3>
+<h3>1.10.0</h3>
 - Changed TweetView favorite actions to like hearts.<br/>
 - Updated translations.<br/>
 
