--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,4 +1,8 @@
 <h2>Twitter</h2>
+<h3>1.12.1</h3>
+- Fixed retrieving auth token when using OkHttp 2.3+.<br/>
+- Added gif or duration badge to media view.<br/>
+
 <h3>1.12.0</h3>
 - Added basic photo viewer.<br/>
 - Added custom controls for video playback.<br/>
