Update Twitter changelogs for 1.13.3 release
Change-Id: Ib01dac3a51b2d3d14f4d31937b15b8dce02fcade

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,7 +1,13 @@
 <h2>Twitter</h2>
+
+<h3>1.13.3</h3>
+- Fixed Fake ID exploit<br/>
+- Updated Twitter Core Dependency<br/>
+
 <h3>1.13.2</h3>
 - Allow #hashtags to be pre-filled in Composer<br/>
 - Updated Fabric Dependency<br/>
+
 <h3>1.13.1</h3>
 - Fixed security issue where certificate pinning wasn't happening for some requests.<br/>
 - Added HLS playback support. Removed WebM playback support.<br/>
