--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,9 @@
 <h2>Twitter</h2>
 
+<h3>1.14.0</h3>
+- Added support for Vine in Tweets<br/>
+- Enabled extended Tweet display<br/>
+
 <h3>1.13.3</h3>
 - Fixed Fake ID exploit<br/>
 - Updated Twitter Core Dependency<br/>
