Prepare for July release.
Kits for release:
* :sdk:digits:digits
* :sdk:twitter:tweet-ui
* :sdk:twitter:twitter

Change-Id: I01ff15c43286c8caeabc3766876481ca7e507ec4

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,8 @@
 <h2>Twitter</h2>
 
+<h3>1.14.1</h3>
+- Bump Digits and tweet-ui dependencies
+
 <h3>1.14.0</h3>
 - Added support for Vine in Tweets<br/>
 - Enabled extended Tweet display<br/>
