Update Twitter release notes
Change-Id: I68d080443fb5da460bfb18ec81b20f22cb703c9f

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,12 @@
 <h2>Twitter</h2>
 
+<h3>2.0.1</h3>
+- Updated proguard rules for Okhttp3 and Retrofit2.<br/>
+- Added translations for Twitter Composer.<br/>
+- Removed pseudo locales from translations.<br/>
+- Moved TwitterCollection from internal package to models.<br/>
+- Minor bug fixes.<br/>
+
 <h3>2.0.0</h3>
 - Dropped support for API versions before API 14 (ICS).<br/>
 - Migrated to Retrofit 2.0 and OkHttp 3.2.<br/>
