Update release notes
Change-Id: Ib1bf52d28b044a1d541e5cc1b4f966e27e070412

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,10 @@
 <h2>Twitter</h2>
 
+<h3>2.1.0</h3>
+- Added multi-photo support for inline views and the fullscreen gallery view.<br/>
+- Fixed IllegalArgumentException in GuestAuthenticator.<br/>
+- Updated Twitter Core dependency to version 2.1.0.<br/>
+
 <h3>2.0.1</h3>
 - Updated proguard rules for Okhttp3 and Retrofit2.<br/>
 - Added translations for Twitter Composer.<br/>
