Update release notes for Twitter kit hotfix
Change-Id: I69ade4104b81e6a32f7f5461f1ba85b6e05f00ae

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,9 @@
 <h2>Twitter</h2>
 
+<h3>2.1.1</h3>
+- Fixed UnsupportedOperationException when rendering multiple photos API 17 and below.<br/>
+- Updated Tweet UI dependency to version 2.1.1.<br/>
+
 <h3>2.1.0</h3>
 - Added multi-photo support for inline views and the fullscreen gallery view.<br/>
 - Fixed IllegalArgumentException in GuestAuthenticator.<br/>
