Prepare for November release.
Kits for release:
* :sdk:twitter:twitter-core
* :sdk:twitter:tweet-ui
* :sdk:twitter:tweet-composer
* :sdk:twitter:twitter

Change-Id: I87431a655a3b0b83a1cce216deee29c10833ef0d

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,10 @@
 <h2>Twitter</h2>
 
+<h3>2.2.0</h3>
+- Added support for quote Tweet display. <br/>
+- Added support for user defined OkHttpClient. <br/>
+- Updated Twitter UI and Twitter Core dependencies. <br/>
+
 <h3>2.1.1</h3>
 - Fixed UnsupportedOperationException when rendering multiple photos API 17 and below.<br/>
 - Updated Tweet UI dependency to version 2.1.1.<br/>
