Prepare for December release.
Kits for release:
* :sdk:twitter:twitter-core
* :sdk:twitter:tweet-ui
* :sdk:twitter:tweet-composer
* :sdk:twitter:twitter

Change-Id: I3fe98fc4d702ab078930d3f1697f1f8f153e1410

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,10 @@
 <h2>Twitter</h2>
 
+<h3>2.3.0</h3>
+- Added support for timeline filtering <br/>
+- Normalized user-agent to avoid errors with non-ascii characters <br/>
+- Added symbols to Tweet entities <br/>
+
 <h3>2.2.0</h3>
 - Added support for quote Tweet display. <br/>
 - Added support for user defined OkHttpClient. <br/>
