Update release notes for 2.3.1 release
Change-Id: I94badfc08ac53690084c61b1c3fe2b24d9bc75ee

--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,9 +1,15 @@
 <h2>Twitter</h2>
 
+<h3>2.3.1</h3>
+- Restricted Broadcast Intents to current application to avoid leaking sensitive information. <br/>
+- Improved RTL mirroring for Tweet views. <br/>
+- Dates are now properly localized for non-English locales. <br/>
+- Updated Tweet UI and Twitter Core dependencies. <br/>
+
 <h3>2.3.0</h3>
-- Added support for timeline filtering <br/>
-- Normalized user-agent to avoid errors with non-ascii characters <br/>
-- Added symbols to Tweet entities <br/>
+- Added support for timeline filtering. <br/>
+- Normalized user-agent to avoid errors with non-ascii characters. <br/>
+- Added symbols to Tweet entities. <br/>
 
 <h3>2.2.0</h3>
 - Added support for quote Tweet display. <br/>
