--- a/twitter/release-notes.html
+++ b/twitter/release-notes.html
@@ -1,5 +1,11 @@
 <h2>Twitter</h2>
 
+<h3>2.3.2</h3>
+- Videos less than 6.5 seconds now loop.<br/>
+- Fixed issue where quote Tweets with media showed both media and quote Tweet. Only media should be shown if both are included.<br/>
+- Added ability to set geocode for SearchTimeline builder.<br/>
+- Updated Tweet UI and Twitter Core dependencies.<br/>
+
 <h3>2.3.1</h3>
 - Restricted Broadcast Intents to current application to avoid leaking sensitive information. <br/>
 - Improved RTL mirroring for Tweet views. <br/>
